1998-12-24  Harri Porten  <porten@kde.org>

	* runtests.cpp: relaxed my previously enforced suid check for pppd

1998-12-23  Harri Porten  <porten@kde.org>

	* runtests.cpp, opener.cpp: fixed FreeBSD compile problem reported by Hans
	Petter Bieker

1998-12-22  Harri Porten  <porten@kde.org>

	* pppdata.cpp: Give users upgrading from KDE 1.0 instructions how
	to modify their kppprc if it is owned by root (KConfig bug back then).

1998-12-21  Mario Weilguni <mweilguni@kde.org>

	* opener.cpp: using umask now instead of chmod (more safe)
	* opener.cpp: regfree was called too late. Fixed.
	* re-enable scripts when using CHAP or PAP
	* cosmetic changes in the "Accounts" widget

1998-12-21  Harri Porten  <porten@kde.org>

	* opener.h: define system dependend type cast for struct iovec's
	iov_base. FreeBSD needs (char *) instead (void *).

1998-12-20  Mario Weilguni <mweilguni@kde.org>

	* added Germany Mannesmann Arcor ruleset

1998-12-20  Harri Porten  <porten@kde.org>

	* docking.cpp: call KWM::activate() on connection window after
	being re-opened from docking icon (recommended by Matthias on
	kde-devel)
	* ppplog.cpp: re-introduced reading messages with fgets() instead
	of single chars. Should be faster.
	* ppplog.cpp: worked on diagnostic messages

1998-12-18  Harri Porten  <porten@kde.org>

	* #include "auth.h" was needed after pap.h was removed
	* opener.h: workaround for glibc bug in RedHat 5.0. Since there is
	presumably no way to detect the exact release version we'll simply
	define SCM_RIGHTS to be 1 for every glibc2.0 on Linux. This should
	solve the conflict with the kernel.  

1998-12-18  Harri Porten  <porten@kde.org>

	* removed pap.* and chap.* files and moved their code in
	requester.cpp where all setuid root stuff is gathered now.
	* requester.cpp: rewrote PAP/CHAP so that the setuid part is free
	of any Qt/X calls. 

1998-12-16  Mario Weilguni <mweilguni@kde.org>

	* added Indonesia rule files
	* added some new Denmark rule files