@@ -840,10 +840,10 @@ void dieppp(int sig) {
     if(id == gpppdata.suidChildPid() && gpppdata.suidChildPid() != -1) {
       Debug("It was the setuid child that died\n");
       gpppdata.setSuidChildPid(-1);
-      QString msg = "Sorry. kppp's helper process just died.\n\n" \
-                    "Since a further execution would be pointless, " \
-                    "kppp will shut down right now.";
-      QMessageBox::critical(0L, i18n("Error"), i18n(msg));
+      QString msg = i18n("Sorry. kppp's helper process just died.\n\n"
+                         "Since a further execution would be pointless, "
+                         "kppp will shut down right now.");
+      QMessageBox::critical(0L, i18n("Error"), msg);
       remove_pidfile();
       shutDown(1);
     }
