@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.24 (Release 160)"
+#define KPPPVERSION "1.5.25 (Release 161)"
 #endif
